--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
     "crates/sage",
     "crates/sage-cli",
     "crates/sage-cloudpath",
+    "crates/pysage-connector",
 ]
 
 resolver = "2"
