package name adapted

--- a/crates/pysage-connector/Cargo.toml
+++ b/crates/pysage-connector/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
-name = "pysage_connector"
+name = "pysage-connector"
 version = "0.1.0"
 edition = "2021"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "pysage_connector"
+crate-type = ["cdylib"]
 
 [dependencies]
 sage-core = {path = "../sage"}
