--- a/crates/sage/Cargo.toml
+++ b/crates/sage/Cargo.toml
@@ -18,6 +18,7 @@ log = "0.4.0"
 rayon = "1.5"
 regex = "1.6"
 serde = { version="1.0", features = ["derive"] }
+rand = "0.8.5"
 
 [dev-dependencies]
 quickcheck = "1"
